<resources>
    <string name="app_name">Union</string>

    <string name="welcome_text">Welcome,</string>
    <string name="welcome_back">Welcome Back,</string>

    <!--    HINTS-->
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_pass_hint">Confirm Password</string>

    <!--    SIGN UP-->
    <string name="create_acc_text">Create Your Account Now !</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_acc">Already have an account ?</string>
    <string name="password_error">"Password is too weak. Please use a password longer than 6 characters, containing at least one uppercase letter, one lowercase letter, one number, and one special character."</string>
    <string name="password_not_match">"Password does not match."</string>
    <string name="password_empty">Please fill both password field.</string>
    <string name="email_empty">Please fill the email field.</string>
    <string name="email_invalid">Please fill a valid email.</string>
    <string name="username_hint">Username</string>
    <string name="username_empty">Please fill the username.</string>
    <string name="nim_input">NIM</string>
    <string name="nim_empty">Please fill the NIM field.</string>

    <!--    SIGN IN-->
    <string name="sign_in">Sign In</string>
    <string name="sign_in_desc">Sign in to your account !</string>
    <string name="no_acc">Don\'t have an account ?</string>


    <!--    GREETINGS-->
    <string name="greetings_morning">Good Morning</string>
    <string name="greetings_afternoon">Good Afternoon</string>
    <string name="greetings_evening">Good Evening</string>

    <!--    ACCOUNT RELATED-->
    <string name="sign_out">Sign Out</string>
    <string name="save">Save</string>
    <string name="reset_password">Reset Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="account">Account</string>
    <string name="change_password">Change Password</string>
    <string name="delete_account">Delete Account</string>

    <!--    ATTENDANCE-->
    <string name="history">History</string>
    <string name="attendance_button">Attendance check in/out button</string>
    <string name="take_photo">Take Photo</string>
    <string name="upload">Upload Photo</string>
    <string name="submit_in">Check In</string>
    <string name="submit_out">Check Out</string>
    <string name="discard">Discard Photo</string>

    <!--    HISTORY-->
    <string name="no_data">No Records Found.</string>
    <string name="check_in_time">Check-In Time</string>
    <string name="check_out_time">Check-Out Time</string>
    <string name="time_placeholder">00:00:00</string>
    <string name="date_placeholder">Date</string>

    <!--    MISC-->
    <string name="check_out_time_text">Check-Out Time :</string>
    <string name="check_in_time_text">Check-In Time :</string>
    <string name="username_not_set_warning">Username Not Set.</string>
    <string name="get_started_text">Get Started</string>
    <string name="carousel">carousel</string>


</resources>